--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: expense-tracker-backend
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/expensetracker
+    url: jdbc:postgresql://postgres:5432/expensetracker
     driver-class-name: org.postgresql.Driver
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:password}
