--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_DB: expensetracker
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
     volumes:
@@ -19,7 +19,7 @@ services:
       - "8081:8081"
     environment:
       DB_USERNAME: postgres
-      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PASSWORD: password
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/expensetracker
       SPRING_PROFILES_ACTIVE: prod
     depends_on:
