--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- Health endpoints for production (Cloud Run, monitoring) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- WebClient for calling Gemini -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
