--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# Java / Maven
+**/target/
+*.log
+
+# Environment / secrets
+.env
+.env.*
+!**/.env.example
